syntax = "proto3";

package product;

import "pkg/proto/common/common.proto";

option go_package = "github.com/Riku-KANO/kube-ec/services/product/proto";

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (Product);
  rpc GetProduct(GetProductRequest) returns (Product);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (Product);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
  rpc UpdateStock(UpdateStockRequest) returns (Product);
  rpc CheckStock(CheckStockRequest) returns (CheckStockResponse);
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  common.Money price = 4;
  int32 stock_quantity = 5;
  string category = 6;
  repeated string image_urls = 7;
  string sku = 8;
  bool is_active = 9;
  common.Timestamp created_at = 10;
  common.Timestamp updated_at = 11;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  common.Money price = 3;
  int32 stock_quantity = 4;
  string category = 5;
  repeated string image_urls = 6;
  string sku = 7;
}

message GetProductRequest {
  string id = 1;
}

message ListProductsRequest {
  common.Pagination pagination = 1;
  string category = 2;
  string search_query = 3;
}

message ListProductsResponse {
  repeated Product products = 1;
  common.PaginationResponse pagination = 2;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  common.Money price = 4;
  int32 stock_quantity = 5;
  string category = 6;
  repeated string image_urls = 7;
  bool is_active = 8;
}

message DeleteProductRequest {
  string id = 1;
}

message DeleteProductResponse {
  bool success = 1;
}

message UpdateStockRequest {
  string product_id = 1;
  int32 quantity_change = 2; // 正の値で増加、負の値で減少
}

message CheckStockRequest {
  string product_id = 1;
  int32 required_quantity = 2;
}

message CheckStockResponse {
  bool available = 1;
  int32 current_stock = 2;
}
